--- a/restaurante_la_orden/src/app/componets/menu-item/menu-item.component.html
+++ b/restaurante_la_orden/src/app/componets/menu-item/menu-item.component.html
@@ -1,10 +1,9 @@
-<!-- @if(route|hasChildren){
+@if(route|hasChildren){
     <ul class="sub-menu"   
         routerLinkActive="menu-item__active"
         [routerLinkActiveOptions]="{ exact: false }" 
         #rla="routerLinkActive" nz-submenu 
         [nzTitle]="title" 
-        *appCanUseActions="path_roles" 
         [nzOpen]="rla.isActive">
         <a [routerLink]="path" style="display: none;"></a>
         @for (option of route.children; track $index) {
@@ -13,8 +12,8 @@
             </li>
         }
     </ul>
-     -->
-<!-- }@else if(route.title){ -->
+    
+}@else if(route.title){
     <a 
         class="menu-item menu-item_anchor"
         routerLinkActive="menu-item__active"
@@ -23,17 +22,15 @@
         nz-popover
         [nzPopoverContent]="popOver"
         [routerLink]="path"
-        *appCanUseActions="path_roles">
-        <!-- <ng-icon [name]="route.data?.['icon']"></ng-icon> -->
+        >
         @if (!collapsed) {
             <span nz-typography> {{route.title}}</span>
         }
     </a>
-<!-- } -->
+}
 
 <ng-template #title>
     <div class="flex gap-2 justify-between items-center">
-        <!-- <ng-icon class="text-[--primary-green-color]" [name]="route.data?.['icon']"></ng-icon> -->
         @if (!collapsed) {
             <span nz-typography> {{route.title}}</span>
         }
