--- a/restaurante_la_orden/src/app/app.component.css
+++ b/restaurante_la_orden/src/app/app.component.css
@@ -15,6 +15,7 @@
         @apply bg-[--primary-blue-color];
         @apply relative bottom-0;
         @apply flex flex-col gap-2 justify-start items-start;
+        @apply mt-auto
     }
     .header-container__logo,
     .footer-container__logo{
