--- a/restaurante_la_orden/src/app/componets/sider-nav-bar/sider-nav-bar.component.html
+++ b/restaurante_la_orden/src/app/componets/sider-nav-bar/sider-nav-bar.component.html
@@ -1,5 +1,5 @@
 <ul class="side-menu" nz-menu nzMode="inline">
     @for (opcion of opciones_menu; track $index) {
-        <app-menu-item [route]="opcion" [path]="['/dashboard',opcion.path!]" [collapsed]="collapsed"></app-menu-item>
+        <app-menu-item [route]="opcion" [path]="['/pages', opcion.path!]" [collapsed]="collapsed"></app-menu-item>
     }
 </ul>
