--- a/restaurante_la_orden/src/app/domains/pagues/pedido/pedido.component.html
+++ b/restaurante_la_orden/src/app/domains/pagues/pedido/pedido.component.html
@@ -15,9 +15,9 @@
         class="px-4 py-2 rounded-full border border-gray-300" />
     </div>
 
-    <div class="flex gap-2 justify-end">
-      <button class="bg-blue-900 text-white px-4 py-2 rounded-full text-lg">＋</button>
-      <button class="bg-blue-900 text-white px-4 py-2 rounded-full text-lg">🗑</button>
+    <div class="acciones-pedidos">
+      <button class="btn-accion">＋</button>
+      <button class="btn-accion">🗑</button>
     </div>
   </div>
 
