--- a/restaurante_la_orden/src/app/domains/pagues/pedido/pedido.component.html
+++ b/restaurante_la_orden/src/app/domains/pagues/pedido/pedido.component.html
@@ -56,6 +56,7 @@
 
       <div class="flex gap-2 items-center">
         <button (click)="generarPDF(pedido)" class="ver-acciones-button"> Ver PDF </button>
+        <button (click)="openModal(pedido)" class="ver-acciones-button">Editar </button>
         <button *ngIf="pedido.id_pedido !== undefined && tieneCambios(pedido.id_pedido)"
           (click)="actualizarPedido(pedido)" class="ver-acciones-button">
           Actualizar
@@ -64,4 +65,44 @@
     </div>
   </div>
 
-  <!-- class="bg-green-500 text-white px-3 py-1 rounded-md text-sm" -->
+
+  <div *ngIf="showModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+ <div
+  class="bg-amber-500 p-6 rounded-2xl shadow-lg w-full max-w-2xl flex flex-col md:flex-row items-center gap-6 relative">
+      <!-- Botón de cerrar (X) en la esquina superior derecha -->
+      <button (click)="closeModal()"
+        class="absolute top-4 right-4 text-white text-xl font-bold hover:text-gray-400 transition">
+        &times;
+      </button>
+
+
+      <!-- Info y opciones -->
+      <!-- Info y opciones -->
+      <div class="flex-1 text-white">
+        <h2 class="text-2xl font-bold text-[#FFA500] mb-2">
+          {{ modalMode === 'edit' ? 'Actualizar Mesa' : 'Nueva Mesa' }}
+        </h2>
+        <form [formGroup]="mesaForm" (ngSubmit)="actualizarPedos()"> <input type="number" formControlName="numero"
+            placeholder="Número de Mesa"
+            class="text-black w-full pl-10 p-3 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-orange-400 mb-4">
+          <input type="text" formControlName="descripcion" placeholder="Descripción"
+            class="text-black w-full pl-10 p-3 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-orange-400 mb-4">
+
+          <div class="mb-4">
+            <span class="text-[#FFA500] font-semibold">Personaliza tu QR:</span>
+            <div class="flex gap-2 mt-2">
+              <input formControlName="color" type="color" class="w-10 h-10 cursor-pointer">
+            </div>
+          </div>
+
+          <div class="flex gap-3 mt-4">
+            <button type="submit"
+              class="bg-[#F1E1C6] text-black font-semibold px-4 py-2 rounded-full hover:bg-gray-300 transition">
+              {{ modalMode === 'edit' ? 'Actualizar Mesa' : 'Crear Mesa' }}
+            </button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
